# marvin

./: Dockerfile  README.md  Untitled Diagram.drawio  install.sh
configurations/: .bashrc  r2.bashrc
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
marvin/: CMakeLists.txt
marvin_bringup/: CMakeLists.txt
marvin_description/meshes/: lidar.STL
marvin_description/urdf/: ramel_car.urdf.xacro
marvin_description/urdf/sensors/: depth_camera.urdf.xacro  lidar.urdf.xacro
marvin_gazebo/: CMakeLists.txt  package.xml
marvin_sim_ws/src/marvin_description/: CMakeLists.txt
marvin_sim_ws/src/marvin_navigation/: CMakeLists.txt
marvin_ws/install/: local_setup.sh  setup.sh
marvin_ws/log/: latest_build
marvin_ws/src/marvin/: package.xml
marvin_ws/src/marvin_car_base_node/: CMakeLists.txt
marvin_ws/src/marvin_car_bringup/: setup.cfg
marvin_ws/src/marvin_car_ctrl/: package.xml  setup.cfg
marvin_ws/src/marvin_car_nav/: setup.cfg  setup.py
marvin_ws/src/marvin_lidar/: package.xml
marvin_ws/src/marvin_navigation/: CMakeLists.txt
marvin_ws/src/marvin_sim_bringup/: package.xml
marvin_ws/src/marvincar_base_node/: CMakeLists.txt  package.xml
marvin_ws/src/marvincar_bringup/: package.xml  setup.cfg  setup.py
marvin_ws/src/marvincar_ctrl/: package.xml  setup.cfg  setup.py
marvin_ws/src/marvincar_description/: package.xml  setup.cfg  setup.py
marvin_ws/src/marvincar_laser/: package.xml  setup.cfg  setup.py
marvin_ws/src/marvincar_nav/: package.xml  setup.cfg  setup.py
software/library_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
software/library_ws/log/: latest_build
software/library_ws/src/robot_localization/: CMakeLists.txt
src/: README.md
src/image_pub/launch/: raw_image_pub.launch.py
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/ldlidar_stl_ros2/rviz2/: ldlidar_gmapping.rviz
src/marvin_base/: CMakeLists.txt
src/marvin_base/config/: ekf.yaml
src/marvin_bringup/: CMakeLists.txt  package.xml
src/marvin_bringup/launch/: bringup.launch.py  depth.launch.py  joy_teleop.launch.py  sensors.launch.py
src/marvin_car_bringup/: package.xml  setup.py
src/marvin_car_bringup/launch/: marvin_car_bringup.launch.py  yahboomcar_bringup_R2_launch.py
src/marvin_car_bringup/marvin_car_bringup/: Ackman_driver_R2.py
src/marvin_car_ctrl/: setup.py
src/marvin_car_ctrl/launch/: keyboart_ctrl_launch.py
src/marvin_car_lidar/: CMakeLists.txt  package.xml
src/marvin_car_lidar/launch/: ld19.launch.py  ld19_lidar.launch.py
src/marvin_car_nav/launch/: save_map_launch.py
src/marvin_car_navigation/: CMakeLists.txt  package.xml
src/marvin_car_navigation/launch/: ld19.launch.py
src/marvin_description/: package.xml
src/marvin_description/launch/: description.launch.py  description_launch.py
src/marvin_description/meshes/: back_wheel_left.STL  base_link.STL
src/marvin_description/rviz/: description.rviz
src/marvin_description/urdf/: marvin.urdf.xacro
src/marvin_gazebo/: CMakeLists.txt
src/marvin_gazebo/launch/: gazebo.launch.py
src/marvin_gazebo/rviz/: description.rviz
src/marvin_navigation/: CMakeLists.txt  package.xml
src/marvin_navigation/config/: localization.yaml  localization_car.yaml  navigation.yaml  slam.yaml  twist_mux.yaml
src/marvin_navigation/launch/: localization.launch.py  localization_car.launch.py  navigation.launch.py  slam.launch.py
src/marvin_navigation/maps/: map1.pgm  map1.yaml  map_prueba_serial.data  mapa_prueba.pgm  mapa_prueba.yaml  my_map_save.pgm  my_map_serial.data
src/marvin_navigation/rviz/: marvin_navigation.rviz  marvin_slam.rviz
src/marvin_sim_base/: package.xml
src/marvin_sim_bringup/: CMakeLists.txt  package.xml
src/marvin_sim_bringup/launch/: joy_teleop.launch.py
src/marvin_sim_gazebo/: CMakeLists.txt  package.xml
src/marvin_sim_gazebo/launch/: gazebo.launch.py
src/marvin_sim_gazebo/rviz/: description.rviz
src/marvin_sim_gazebo/worlds/: gas_station.world  outdoor.world  playground.world  small_city.world
src/marvin_simulator/marvin_sim_base/: CMakeLists.txt
src/marvin_simulator/marvin_sim_gazebo/: CMakeLists.txt
src/marvin_slam_gmapping/: CMakeLists.txt
src/marvin_slam_gmapping/src/: marvin_slam_gmapping.cpp  scan_dilute.cpp  (+1 more)
src/realsense2_camera/: CMakeLists.txt  package.xml
src/robot_localization/: CMakeLists.txt
src/yahboomcar_base_node/: CMakeLists.txt
(+312 files in other folders)
